[package]
name = "rsk-fido"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2024"
publish = false

# The FIDO2 (CTAP2) + U2F (CTAP1) applet. Pure and host-testable: device seed /
# serial / RNG and flash come from the caller.
[dependencies]
minicbor = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
p521 = { workspace = true }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
rsk-crypto = { workspace = true }
rsk-fs = { workspace = true }
rsk-led = { workspace = true }
rsk-mgmt = { workspace = true }
rsk-rescue = { workspace = true }
rsk-sdk = { workspace = true }
zeroize = { workspace = true }

[build-dependencies]
# Host-side P-521 arithmetic to generate the fixed-base comb table (build.rs).
p521 = { workspace = true }

[dev-dependencies]
minicbor = { workspace = true }
rsk-fs = { workspace = true, features = ["test-util"] }

[features]
# Advertise ML-DSA-44 (-48) in getInfo `algorithms` (0x0A). OFF by default:
# shipped Firefoxes (authenticator-rs before 2026-06-02) hard-fail the whole
# getInfo parse on an unknown COSE id. The PQC capability itself is always on —
# makeCredential negotiates -48 from the request regardless of this flag.
advertise-pqc = []
# FIPS-style policy profile, OFF by default — the default build changes in no
# way. When enabled: ES256K (secp256k1) leaves the FIDO menu, the minimum PIN
# rises to 6 and the vendor seed export is refused. A build profile, not a
# FIPS validation — see docs/guides/fips.md.
fips-profile = []
# FIDO Conformance Tool build profile, OFF by default. Suppresses the EdDSA (-8)
# advertisement in getInfo `algorithms` (0x0A): the tool's shared
# verifySignatureCOSE maps only -7/-35/-36, so it cannot verify a packed EdDSA
# self-attestation (MakeCred-Resp P-06). The shipping build ADVERTISES -8 — the
# Windows WebAuthn API drops unadvertised algorithms, breaking `ed25519-sk`. The
# EdDSA capability itself is unchanged; only the advertisement is suppressed. Pair
# with `metadata/rs-key.conformance.metadata.json`. Conformance ONLY — never ship.
# Implies `strict-up`: the conformance pass was validated with a touch on every
# assertion, so the conformance image keeps that exact behavior.
fido-conformance = ["strict-up"]
# Require user presence on EVERY getAssertion, OFF by default. The default build
# honors `up:false` — the platform's silent pre-flight probe returns with no
# touch and the UP flag clear, so a WebAuthn login (allowList credential) is a
# SINGLE touch, matching the spec and YubiKey. With `strict-up` the button is
# polled on every assertion including that probe, so such a login asks for TWO
# touches (one for the probe, one for the real assertion) — a deliberately
# stricter "every assertion needs an explicit gesture" stance. See docs/build.md.
strict-up = []
# Add the FIDO Conformance Tool's fixed enterprise-attestation test RPID
# (enterprisetest.certinfra.fidoalliance.org) to the vendor-facilitated (type 1)
# EA eligibility list, so the tool's Enterprise-Attestation type-1 case can run.
# Implies `fido-conformance` (an EA conformance build is a conformance build, so
# it must also suppress EdDSA). Conformance self-validation ONLY — never ship it
# (it would grant enterprise attestation to a FIDO test domain). Shipping
# firmware's type-1 list is empty.
ea-conformance-rpid = ["fido-conformance"]
# Enable the CTAP 2.1 `alwaysUv` option BY DEFAULT — out of the box and after every
# authenticatorReset — so the device demands user verification for every
# makeCredential / getAssertion with no post-flash `ykman fido config
# toggle-always-uv`. OFF by default (the shipped image leaves alwaysUv off until a
# platform toggles it). Still runtime-toggleable: `toggleAlwaysUv` writes an explicit
# override (`EF_ALWAYS_UV` = `[1]`/`[0]`) that outlives reboots but not a reset, which
# clears it back to this compiled default. With alwaysUv on and no PIN set (and no
# built-in UV), makeCredential / getAssertion return CTAP2_ERR_PUAT_REQUIRED until a
# PIN is configured — the standard alwaysUv cue for the platform to set one.
always-uv = []
