[package]
name = "rsk-fs"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2024"
publish = false

# ISO-7816 file API over a backend-agnostic FID->bytes Storage.
# HAL-agnostic: the flash Storage impl lives in `firmware`; tests use a RAM one.
# `cfg(kani)` guards the proof harnesses (set by `cargo kani`, unknown to rustc).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[dependencies]
rsk-sdk = { workspace = true }
heapless = "0.8"

[features]
# Exposes the in-memory `RamStorage` to other crates' tests (needs std).
test-util = []
