[package]
name = "rsk-mgmt"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2024"
publish = false

[dependencies]
rsk-sdk = { workspace = true }
rsk-fs = { workspace = true }

[dev-dependencies]
# RamStorage for the host tests (the same backend rsk-fido/rsk-openpgp use).
rsk-fs = { workspace = true, features = ["test-util"] }
